Bug 494222 - Opening "ftp://" URLs causes Falkon to create lots of blank tabs
Summary: Opening "ftp://" URLs causes Falkon to create lots of blank tabs
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.1
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-06 22:33 UTC by Anna
Modified: 2024-11-06 18:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anna 2024-10-06 22:33:53 UTC
SUMMARY
Falkon lists "x-scheme-handler/ftp" in MimeType field of its desktop file, making it a handler for "ftp://" URLs. But it doesn't display FTP directories itself, uses KIO to find appropriate application, finds itself, enters an endless loop.

STEPS TO REPRODUCE
1. Open "ftp://example.com"

OBSERVED RESULT
Falkon opens a new tab, which opens a new tab, and so on.

EXPECTED RESULT
Falkon either displays FTP directories, or opens another application (not itself).

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION
Comment 1 Juraj 2024-10-29 08:12:36 UTC
Hello Ana,

It looks like Chrome/Chromium removed support for ftp links in version 95.
Since Qt6 is based on a newer version I assume this support is gone, unless I am missing something.

I will try to remove the default handling from Falkon to let the operating system handle this.

Thank you for reporting.
Best regards,
Juraj
Comment 2 Bug Janitor Service 2024-10-30 05:53:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/92
Comment 3 Juraj 2024-11-06 18:44:58 UTC
Git commit e3cf9424cc09eb0bc98db0cdc141522673d85b31 by Juraj Oravec.
Committed on 06/11/2024 at 18:44.
Pushed by jurajo into branch 'master'.

Remove FTP support

The sepport was removed from Chromium, QtWebEngine.

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +1    -1    linux/applications/org.kde.falkon.desktop
M  +0    -3    src/lib/app/mainapplication.cpp
M  +1    -1    src/lib/history/history.cpp
M  +0    -1    src/lib/webengine/webpage.cpp
M  +0    -3    windows/installer.nsi
M  +1    -1    windows/strings.nsh

https://invent.kde.org/network/falkon/-/commit/e3cf9424cc09eb0bc98db0cdc141522673d85b31