Remove FTP support

The sepport was removed from Chromium, QtWebEngine.

BUG: 494222

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>